Added email builder class which uses message source for generating registration confirm email

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -7,7 +7,14 @@ error.registered.activationOther=Nie udało się aktywować użytkownika, sprób
 error.registered.userEmailNotFound=Nie udało się odnaleźć użytkownika o podanym adresie email.
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
+error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasłą, spróbuj ponownie później
+error.userNotFound=Nie udało się odnaleźć podanego użytkownika.
 
 success.registered.emailSent=Użytkownik został zarejestrowany,na pocztę email przesłano link aktywacyjny ważny 24 godziny.
 success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę pocztową w celu aktywacji konta
 success.passwordChangedEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu zmiany hasła.
+
+emailBuilder.register.content=Aby aktywować swoje konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
+emailBuilder.register.subject=Potwierdzenie rejestracji w serwisie TESTOWNIKI
+emailBuilder.register.url=/authentication/confirmRegistration/
+
