Refactored resending verification email to use events backed by mail builder insted of hardcoded mail messages

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -5,6 +5,8 @@ error.registered.invalidToken=Podany token nie istnieje, link może być niepopr
 error.registered.tokenExpired=Czas życia linku wygasł, w celu potwierdzenia konta poproś o ponowne wysłanie linku weryfikacyjnego.
 error.registered.activationOther=Nie udało się aktywować użytkownika, spróbuj ponownie później.
 error.registered.userEmailNotFound=Nie udało się odnaleźć użytkownika o podanym adresie email.
+error.registered.userAlreadyActive=Użytkownik już jest aktywny.
+
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
 error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasłą, spróbuj ponownie później
