Added verification email for password changing

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -7,6 +7,7 @@ error.registered.activationOther=Nie udało się aktywować użytkownika, sprób
 error.registered.userEmailNotFound=Nie udało się odnaleźć użytkownika o podanym adresie email.
 error.registered.userAlreadyActive=Użytkownik już jest aktywny.
 
+error.registered.invalidTokenType=Niepoprawne przeznaczenie tokenu, upewnij się że skopoiowałeś link z odpowiedniej wiadomości.
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
 error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasłą, spróbuj ponownie później
@@ -16,7 +17,12 @@ success.registered.emailSent=Użytkownik został zarejestrowany,na pocztę email
 success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę pocztową w celu aktywacji konta
 success.passwordChangedEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu zmiany hasła.
 
+
 emailBuilder.register.content=Aby aktywować swoje konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
 emailBuilder.register.subject=Potwierdzenie rejestracji w serwisie TESTOWNIKI
 emailBuilder.register.url=/authentication/confirmRegistration/
 
+
+emailBuilder.changePassword.content=Aby zmienić swoje hasło skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
+emailBuilder.changePassword.subject=Zmiana hasła w serwisie TESTOWNIKI
+emailBuilder.changePassword.url=/authentication/changePassword/
