Users can now change password after email verification

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -1,13 +1,13 @@
 error.password.notTheSame=Hasła nie są identyczne!
 error.registered.userExists=Użytkownik o podanym adresie email lub loginie już istnieje.
 error.registered.other=Wystąpił błąd przy dodawania użytkownika, spróbuj ponownie później.
-error.registered.invalidToken=Podany token nie istnieje, link może być niepoprawny, lub jego czas życia wygasł.
+error.invalidToken=Podany token nie istnieje, link może być niepoprawny, lub jego czas życia wygasł.
 error.registered.tokenExpired=Czas życia linku wygasł, w celu potwierdzenia konta poproś o ponowne wysłanie linku weryfikacyjnego.
 error.registered.activationOther=Nie udało się aktywować użytkownika, spróbuj ponownie później.
 error.registered.userEmailNotFound=Nie udało się odnaleźć użytkownika o podanym adresie email.
 error.registered.userAlreadyActive=Użytkownik już jest aktywny.
 
-error.registered.invalidTokenType=Niepoprawne przeznaczenie tokenu, upewnij się że skopoiowałeś link z odpowiedniej wiadomości.
+error.invalidTokenType=Niepoprawne przeznaczenie tokenu, upewnij się że skopoiowałeś link z odpowiedniej wiadomości.
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
 error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasłą, spróbuj ponownie później
@@ -16,6 +16,7 @@ error.userNotFound=Nie udało się odnaleźć podanego użytkownika.
 success.registered.emailSent=Użytkownik został zarejestrowany,na pocztę email przesłano link aktywacyjny ważny 24 godziny.
 success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę pocztową w celu aktywacji konta
 success.passwordChangedEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu zmiany hasła.
+success.passwordChanged=Hasło pomyślnie zmienione.
 
 
 emailBuilder.register.content=Aby aktywować swoje konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
