Added verification email for removing user account

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -10,12 +10,14 @@ error.registered.userAlreadyActive=Użytkownik już jest aktywny.
 error.invalidTokenType=Niepoprawne przeznaczenie tokenu, upewnij się że skopoiowałeś link z odpowiedniej wiadomości.
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
-error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasłą, spróbuj ponownie później
+error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasła, spróbuj ponownie później
+error.userRemoveOther=Wystąpił błąd przy próbie usunięcia użytkownika, spróbuj ponownie później
 error.userNotFound=Nie udało się odnaleźć podanego użytkownika.
 
 success.registered.emailSent=Użytkownik został zarejestrowany,na pocztę email przesłano link aktywacyjny ważny 24 godziny.
 success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę pocztową w celu aktywacji konta
 success.passwordChangedEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu zmiany hasła.
+success.userAccountRemovalEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu usunięcia konta.
 success.passwordChanged=Hasło pomyślnie zmienione.
 
 
@@ -27,3 +29,7 @@ emailBuilder.register.url=/authentication/confirmRegistration/
 emailBuilder.changePassword.content=Aby zmienić swoje hasło skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
 emailBuilder.changePassword.subject=Zmiana hasła w serwisie TESTOWNIKI
 emailBuilder.changePassword.url=/authentication/changePassword/
+
+emailBuilder.removeUser.content=Aby usunąć konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
+emailBuilder.removeUser.subject=Potwierdzenie usunięcia konta w serwisie TESTOWNIKI
+emailBuilder.removeUser.url=/authentication/removeUser/
