User can now delete account using confirmation link send to email

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -7,6 +7,8 @@ error.registered.activationOther=Nie udało się aktywować użytkownika, sprób
 error.registered.userEmailNotFound=Nie udało się odnaleźć użytkownika o podanym adresie email.
 error.registered.userAlreadyActive=Użytkownik już jest aktywny.
 
+error.login.invalidUsernameOrPasswaord=Nieprawidłowa nazwa użytkownika lub hasło.
+
 error.invalidTokenType=Niepoprawne przeznaczenie tokenu, upewnij się że skopoiowałeś link z odpowiedniej wiadomości.
 error.tokenResendError=Nie udało się wysłać linku aktywacyjnego, spróbuj ponownie później.
 error.tokenLinkCreationError=Wystąpił błąd przy próbie utworzenia linku.
@@ -19,6 +21,7 @@ success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę p
 success.passwordChangedEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu zmiany hasła.
 success.userAccountRemovalEmailSent=Wysłano link weryfikujący, sprawdź pocztę w celu usunięcia konta.
 success.passwordChanged=Hasło pomyślnie zmienione.
+success.userRemoval=Pomyślnie usunięto konto.
 
 
 emailBuilder.register.content=Aby aktywować swoje konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
