Added error page for handling exceptions

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -36,3 +36,12 @@ emailBuilder.changePassword.url=/authentication/changePassword/
 emailBuilder.removeUser.content=Aby usunąć konto skopiuj poniższy link w okno przeglądarki:\nlocalhost:8000
 emailBuilder.removeUser.subject=Potwierdzenie usunięcia konta w serwisie TESTOWNIKI
 emailBuilder.removeUser.url=/authentication/removeUser/
+
+error.400=Nieprawidłowe zapytanie - sprawdź poprawność adresu, oraz przesłanych danych.
+error.401=Nie masz uprawnień do żądanego zasobu, zaloguj się na konto z przyznanymi odpowiednimi uprawnieniami w celu uzyskania dostępu.
+error.403=Dany zasób jest niedostepny dla użytkowników.
+error.404=Nie udało się odnależć określonego zasobu, sprawdź poprawność adresu.
+
+error.500=Przepraszamy! Wystąpił nieoczekiwany błąd po stronie serwera.
+
+error.other=Wystąpił nieoczekiwany błąd podczas obsługi zapytania.
