Improved question conversion when reading from filesystem, and fixed invalid json in js script

--- a/src/main/resources/messages_pl_PL.properties
+++ b/src/main/resources/messages_pl_PL.properties
@@ -16,6 +16,7 @@ error.changePasswordErrorOther=Wystąpił błąd przy próbie zmiany hasła, spr
 error.userRemoveOther=Wystąpił błąd przy próbie usunięcia użytkownika, spróbuj ponownie później
 error.userNotFound=Nie udało się odnaleźć podanego użytkownika.
 error.invalidJsonData=Nie udało się prawidłowo przekonwertować pytań, sprawdź format i zawartość plików.
+error.json.writing=Nie udało się pobrać pytań z bazy, sprobuj ponownie później.
 
 success.registered.emailSent=Użytkownik został zarejestrowany,na pocztę email przesłano link aktywacyjny ważny 24 godziny.
 success.token.emailSent=Wysłano ponownie link aktywacyjny, sprawdź skrzynkę pocztową w celu aktywacji konta
